12-05-2026: Fin stats timbres BK